--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,93 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background-color: black;
+}
+
+header{
+  text-align: right;
+  margin-right: 30px;
+  margin-top: 50px;
+}
+.nav-link {
+  font-size: 30px;
+  margin:  20px 20px;
+  text-decoration: none;
+  color: white;
+}
+.nav-link:hover {
+  border-bottom: 3px solid red; /* 마우스를 올렸을 때 빨간색 하단선 */
+  color: red;;
+}
+.spot h2{
+  font-size: 80px;
+  color: white;
+  margin-left: 50px;
+}
+div > p{
+  display: flex;
+  flex-direction: column; /* 이미지 위, 텍스트 아래 */
+  text-align: center;
+  min-width: 150px;
+  color: white;
+  margin-left: 50px;
+}
+div > img{
+  display: flex;
+}
+.spot p {
+  text-align: left; /* 본문 왼쪽 정렬 */
+  font-size: 20px;
+}
+.spot button{
+  font-size: 30px;
+  padding: 10px 40px; /* 버튼 내부 여백 */
+  border-radius: 20px; /* 둥근 버튼 */
+  border: 5px solid white;
+  color: white;
+  background-color: black;
+  margin-left: 50px;
+  margin-top: 40px;
+  margin-bottom: 200px;
+}
+.spot button:hover{
+  background-color: white;
+  color: red;
+}
+.title{
+  font-size: 50px
+}
+
+div button:first-child{
+  background-color: red;
+  color: white;
+  border: 2px solid red;
+}
+div > h2 > button{
+  float: right;
+  font-size: 22px;
+  padding: 5px 20px; /* 버튼 내부 여백 */
+  border-radius: 50px; /* 둥근 버튼 */
+  border: 2px solid white; /* 기본 테두리 제거 */
+  background-color: black; /* 버튼 배경색 (원하는 색상으로 변경 가능) */
+  color: white; /* 글자 색상 */
+  cursor: pointer; /* 마우스 올렸을 때 클릭 가능하도록 변경 */
+  transition: background 0.3s ease;
+}
+
+div > h2 > button:hover {
+  background-color: white; /* 마우스를 올렸을 때 색 변경 */
+  color: red;
+}
+
+
+.mainname h2{
+  font-size: 35px;
+  color: white;
+  margin-left: 50px;
+}
+.mySwiper .swiper-pagination {
+  display: none; /* 하단 바 숨기기 */
+}
