--- a/src/Header.css
+++ b/src/Header.css
@@ -1,25 +1,30 @@
 .header {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   padding: 35px 60px;
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 10;
   background: transparent;
+  font-family: 'Segoe UI', sans-serif;
 }
+
 .logo {
   font-size: 40px;
   font-weight: bold;
   color: white;
-  margin-left: -55px;
   text-decoration: none;
   margin-right: auto;
 }
+
 .nav {
   display: flex;
-  margin-left: 900px;
+  position: absolute;
+  right: 60px; /* 완전 오른쪽에 붙이기 */
 }
+
 .nav a {
   margin-left: 40px;
   text-decoration: none;
@@ -28,6 +33,7 @@
   font-size: 24px;
   position: relative;
 }
+
 .nav a.active::after {
   content: '';
   display: block;
