--- a/src/Header.css
+++ b/src/Header.css
@@ -10,7 +10,6 @@
   background: transparent;
   font-family: 'Segoe UI', sans-serif;
 }
-
 .logo {
   font-size: 40px;
   font-weight: bold;
@@ -18,13 +17,11 @@
   text-decoration: none;
   margin-right: auto;
 }
-
 .nav {
   display: flex;
   position: absolute;
-  right: 60px; /* 완전 오른쪽에 붙이기 */
+  right: 60px;
 }
-
 .nav a {
   margin-left: 40px;
   text-decoration: none;
@@ -33,7 +30,6 @@
   font-size: 24px;
   position: relative;
 }
-
 .nav a.active::after {
   content: '';
   display: block;
